# shikaku_toruzoo

./: .gitignore  CLAUDE.md  Dockerfile  README.md
.claude/: settings.local.json
backend/: .env.example  Cargo.toml
backend/src/: config.rs  db.rs  errors.rs  main.rs
backend/src/handlers/: auth.rs  certification.rs  community.rs  favorite.rs  goal.rs  master.rs  mod.rs
backend/src/middleware/: auth.rs  mod.rs  rate_limit.rs
backend/src/models/: certification.rs  favorite.rs  goal.rs  master.rs  mod.rs  session.rs  user.rs
backend/src/services/: auth_service.rs  cert_service.rs  community_service.rs  favorite_service.rs  goal_service.rs  master_service.rs  mod.rs
backend/src/utils/: hash.rs  mod.rs  token.rs
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  env.d.ts  main.ts
frontend/src/api/: auth.ts  certification.ts  client.ts  community.ts  favorite.ts  goal.ts  master.ts
frontend/src/assets/styles/: _variables.scss  main.scss
frontend/src/components/common/: ConfirmModal.vue  (+4 more)
frontend/src/composables/: useAuth.ts  useDebounce.ts  useToast.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  certification.ts  community.ts  favorite.ts  goal.ts
frontend/src/types/: index.ts
frontend/src/views/: CertificationView.vue  CommunityView.vue  DashboardView.vue  GoalView.vue  SignInView.vue  SignUpView.vue  UserDetailView.vue
ドキュメント/: 01_要件定義書.md  02_基本設計書.md  03_詳細設計書.md  04_単体テスト仕様書.md  05_結合テスト仕様書.md  06_総合テスト仕様書.md  07_納品手順書.md
ドキュメント_tmp/: step1_各種設計書.md  step2_各種テスト.md  step3_納品手順書.md
(+11 files in other folders)
