[package]
name = "certmanager"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-files = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
argon2 = "0.5"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
log = "0.4"
env_logger = "0.11"
validator = { version = "0.18", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
hex = "0.4"
urlencoding = "2"
